[project]
name = "chroma-peek"
version = "0.1.0"
description = "A UI to view your ChromaDB quickly"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "chromadb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chroma-peek"]

